@@ -13,6 +13,7 @@
   - cmdline option /CF added.
   - fixed: ES1371 audio driver.
   - /F cmdline option now accepts 11025 as argument.
+  - fixed: SB Live/Audigy driver frequency handling.
 
   v1.6, 10.6.2025
   - fixed: some port trap variables weren't initialized if real-mode port
